# btx-nvidia-miner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: build-cuda.yml  release.yml
cmake/: cuda_architectures.cmake
docs/: BUILD.md
src/: main.cpp
src/common/: cli.cpp  dev_fee.cpp  dev_fee.h  hardware.cpp  hardware.h  log.cpp  metrics.cpp  updater.cpp  updater.h  version.h  work_dispatcher.cpp
src/cuda/: cuda_device.cpp  cuda_device.h  cuda_solver.cpp  cuda_solver.h  gpu_sha256.cu  gpu_sha256.h  hashrate.cpp  hashrate.h  matmul_kernel.cu
src/pow/: field.cpp  field.h  matmul_pow.cpp  matmul_pow.h  matrix.cpp  matrix.h  noise.cpp  noise.h  sha256_portable.cpp  sha256_portable.h  transcript.cpp  transcript.h  uint256_stub.cpp  uint256_stub.h
src/solo/: rpc_client.cpp  solo_miner.cpp
src/stratum/: stratum_client.cpp  stratum_client.h  stratum_protocol.cpp  stratum_protocol.h
tests/: test_cuda_pow.cpp  test_oracle_digest.cpp  test_pow.cpp  wmma_m31_experiment.cu
